Feature #11841
Take into account the remarks of Yohann.